--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-leptos = { version = "0.7.0", features = ["ssr", "hydrate"] }
+leptos = { version = "0.7.0" }
 leptos_router = { version = "0.7.0" }
